--- a/report/document.tex
+++ b/report/document.tex
@@ -179,9 +179,8 @@ BPEL to Java fixme
 
 \pagebreak
 
-\include{skeleton}
-%
-%\input{Introduction}
+\input{introduction}
+\input{skeleton}
 % 
 % \input{LiteratureReview}
 % 
