--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -4,11 +4,15 @@ Today, the web is quickly expanding and new functionalities and applications, ap
 
 %--- Today the web is going to composition of services
 %--- This can be done with ad-hoc solutions or using paradigms to abstract the existent applications and show them as services in a standard way. SOC 
-%--- The implementation of such services also needs an architectural infrastructure, comprehensive of tools, protocols and languages. SOA
-%--- Once the services are put in place, several challenges arise, such as how to discover the services that are publicly available, how the providers can advertise them, how the services should integrate the usage of resources like files or databases, how they provide secure and private access to authorized users and, eventually, how to define the rules to compose and make collaborate the services together.   
+%--- The implementation of such services also needs an architectural infrastructure, ()comprehensive of tools, protocols and languages). SOA
+%--- A service implemented following such an architecture and guidelines, where its communication channel is the web, is called \textit{Web Service} (cite intoduzione ragionata al mondo dei web serv).
+%--- Once the services are put in place, several challenges arise, such as how to discover the services that are publicly available, how the providers can advertise them, how the services should integrate the usage of resources like files or databases, how they provide secure and private access to authorized users and, eventually, how to define the rules to compose and make collaborate the services together. The final result of the interactions among the different services is called \textit{Business Process}, which is widely used in the literature and compares in the acronym of some of the main languages used in the service-oriented applications area.
 
-%--- Focusing on the latter aspect, the composition of services can be achieved using two main approaches: Orchestration and Choreography.
-%---  
+%--- Focusing on the latter aspect, the composition of services, it can be achieved using two main approaches: Orchestration and Choreography.
+%--- Orchestration refers to the (cite intoduzione ragionata al mondo dei web serv, pag 20) business process realized by the interaction of several services supervised by a main actor. Choreography, instead, is a more collaborative approach, where each of the services has a specific role in the accomplishment of the business process.                    
+%--- Narrowing down our attention on the orchestration, and specifically to one the most used specifications  
+
+
  
 % We intend the word \textit{service} as the one used by the UDDI Oasis consortium \cite{Uddi}, where services are self-contained and modular applications that have Internet-oriented and standard-based interfaces. The given definition of services tightly relates to some of the well known web standards used to implement Web Services (WSs) \cite{DiLorenzo08}.
 
