del and ignores

--- a/report/document.tex
+++ b/report/document.tex
@@ -57,7 +57,7 @@ frame=trBL,			        % adds a frame around the code
 breaklines=true,		      % sets automatic line breaking
 showstringspaces=false,         % underline spaces within strings
 }
-%FIXMEEEEEE these settings are reported twice!!!
+%FIXME these settings are reported twice!!!
 
 \thispagestyle{empty}
  \begin{titlepage}
@@ -74,9 +74,9 @@ BPEL to Java fixme
 
  \par}
 \vskip 3cm
-{\Large Bachelor Thesis Project \ Oct 2009 - fixmeApr 2010 \par}
+{\Large Bachelor Thesis Project \ June 2012 - ---- 2012 \par} %fixme
 \vskip 3pt
-To be evaluated on fixme 99$^{th}$ 2010
+To be evaluated on fixme --$^{th}$ 2012  %fixme
 \end{raggedleft}
 \vfill
 \hbox{\vrule\vbox{\hrule
@@ -128,13 +128,14 @@ BPEL to Java fixme
 \begin{description}
          \item {\bf PROJECT PERIOD:}\\
            Bachelor Thesis, \\
-           fixme Oct 1$^{st}$ 2009 -\\fixme 99$^{th}$ 2010\\
+           %fixme Oct 1$^{st}$ 2012 -\\fixme 99$^{th}$ 2010\\
+            June 2012 -\\---- 2012\\
            \hspace{4cm}
-         \item {\bf GROUP MEMBERS:}\\
+         \item {\bf STUDENT:}\\
            Antonio Arfè\\
            \hspace{2cm}
          \item {\bf SUPERVISORS:}\\
-           fixme Vittorini, Marrone
+           V. Vittorini, S. Marrone
 \end{description}
 }
 
@@ -180,9 +181,8 @@ BPEL to Java fixme
 \pagebreak
 
 \input{introduction}
+\input{LiteratureReview}
 \input{skeleton}
-% 
-% \input{LiteratureReview}
 % 
 % \input{Comparison}
 % 
