--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -2,22 +2,38 @@
 %---Web Services Composition Contest
 Today, the web is quickly expanding and new functionalities and applications, appearing day by day, are heavily increasing its potentialities and ease of use. Actually, one of the reasons why this growth is taking place is the possibility to connect and let communicate different existent applications, or better, \textit{services}.
 
-%--- Today the web is going to composition of services
-%--- This can be done with ad-hoc solutions or using paradigms to abstract the existent applications and show them as services in a standard way. SOC 
-%--- The implementation of such services also needs an architectural infrastructure, ()comprehensive of tools, protocols and languages). SOA
-%--- A service implemented following such an architecture and guidelines, where its communication channel is the web, is called \textit{Web Service} (cite intoduzione ragionata al mondo dei web serv).
-%--- Once the services are put in place, several challenges arise, such as how to discover the services that are publicly available, how the providers can advertise them, how the services should integrate the usage of resources like files or databases, how they provide secure and private access to authorized users and, eventually, how to define the rules to compose and make collaborate the services together. The final result of the interactions among the different services is called \textit{Business Process}, which is widely used in the literature and compares in the acronym of some of the main languages used in the service-oriented applications area.
+This can be done through ad-hoc solutions, connecting, for example, some preexistent legacy applications to create a new application (perhaps available online or over a company's intranet) or using paradigms to abstract the existent applications and show them as services in a standard way. %SOC 
+In the case where the standard paradigm is favored, the implementation of such services also needs an architectural infrastructure style, where there are well defined the roles of which part of the application is offering to the outside world the service (Service Provider), who is the user of it (Service Client) and where the service should be published for a public usage (Service Registry). %SOA
+A service implemented following such an architecture and guidelines, where its communication channel is the web, is called \textit{Web Service}.\\ %(cite intoduzione ragionata al mondo dei web serv)
 
-%--- Focusing on the latter aspect, the composition of services, it can be achieved using two main approaches: Orchestration and Choreography.
-%--- Orchestration refers to the (cite intoduzione ragionata al mondo dei web serv, pag 20) business process realized by the interaction of several services supervised by a main actor. Choreography, instead, is a more collaborative approach, where each of the services has a specific role in the accomplishment of the business process.                    
+Once, starting from simple applications, several services are put in place, to reach the goal of creating a new application (which can be, recursively, used as basic service to create another application) reusing the existing ones, many challenges arise. Some of them are: how to discover the services that are publicly available, how the providers can advertise them, how the services should integrate the usage of resources like files or databases, how they provide secure and private access to authorized users and, eventually, how to define the rules to compose and make collaborate the services together. 
+The final result of the interactions among the different services is called \textit{Business Process}, which is widely used in the literature and compares in the acronym of some of the main languages used in the service-oriented applications area.\\
+
+Focusing on the latter aspect, the composition of services, it can be achieved using workflow management applications, that simultaneously coordinate different processes, making them execute actions in sequence or in parallel, and joining or forking their results at the right time. %(Intro Ragionata WS)
+The two main approaches to workflow management are: Orchestration and Choreography.
+Orchestration refers to the %(cite introduzione ragionata al mondo dei web serv, pag 20) 
+business process realized by the interaction of several services supervised by a main actor. Choreography, instead, is a more collaborative approach, where each of the services has a specific role in the accomplishment of the business process. Eventually, orchestration produces an executable process, which can be run by an orchestration engine, while choreography produces an abstract business protocol that cannot be executed, but only contains the specification of the publicly available messages exchanged between the services.\\
+
+\paragraph{FIXME, continue of the introduction}
 %--- Narrowing down our attention on the orchestration, and specifically to one the most used specifications  
-
+--- Narrow down to orchestration and introduce BPEL \\
+--- The proposed approach \\
 
  
 % We intend the word \textit{service} as the one used by the UDDI Oasis consortium \cite{Uddi}, where services are self-contained and modular applications that have Internet-oriented and standard-based interfaces. The given definition of services tightly relates to some of the well known web standards used to implement Web Services (WSs) \cite{DiLorenzo08}.
-
-
+\subsection{Other works}
 
 
 %---Overview of the whole work---
 \subsection{Overview of the thesis}
+FIXME : To expand at the end
+% \begin{itemize}
+%  \item SOC
+%  \item SOA
+%  \item Web Services
+%  \item Orchestration and Choreography
+%  \item BPEL (and its drawbacks)
+%  \item Web Services in a lightweight scenario
+%  \item Proposed approach, MDE, MDA
+% \end{itemize}
+
