--- a/report/LiteratureReview.tex
+++ b/report/LiteratureReview.tex
@@ -1,14 +1,8 @@
 %LiteratureReview
 \section{Literature Review}
 
-
-% \section{MDE: Model Driven Engineering}
-% Model-driven engineering (MDE) is a software development methodology which focuses on creating models rather than computing and algorithmic concepts usually addressed in the classical programming approaches.
-% This discipline attempts an abstraction of the benefits and the features provided by the Software Engineering \cite{Marrone}, usually creating a domain specific framework for implementing new systems, based on well known and tested concepts, obtained through a careful and detailled analysis of the domain and its actors.
-% The best known MDE initiative is the Object Management Group (OMG) initiative Model-Driven Architecture (MDA), which is a registered trademark of OMG \cite{MDE}.
-% 
-% %---Brief overview on SOC and SOA---
-% \subsection{Services and composition, SOC and SOA}
+%--- Brief overview on SOC and SOA
+\subsection{Services and composition, SOC and SOA}
 % During the years preceding the large spread of the internet, companies used to create their own software systems, in order to obtain highly customized and specific services, rarely focused on the accessibility by external partners.
 % Today, with the necessity of exchanging information among different companies and businesses, and the push made by the large growth of the Internet, the focus has moved to the integration and the coordination of the existing softwares, namely, the integration of these systems over larger networks.
 % Defining a \textit{service} as a distributed application that exports a view of its functionalities  \cite{DiLorenzo08}, what is needed is the possibility to compose different services together.
@@ -21,14 +15,23 @@
 % %HERE
 % 
 % it is split up into provider, broker and requestor \cite{Pernici04} \nl
-% 
-% %---Who is dealing with logic and flow?---
-% %\subsubsection{Web Services workflow management: Orchestration vs Choreography}
+
+%---Who is dealing with logic and flow?
+\subsection{Web Services}
 % - Who is going to deal with the logic and flow of the composition? \nl
 % - Two main approaches: Orchestration and Choreography, where is the difference \cite{Peltz03} \nl
 % - The concept of Workflow management \cite{Aalst98} (picture) and why BPEL is good at it.  \nl
 % 
-% 
+
+\subsection{workflow management: Orchestration vs Choreography}
+
+\subsection{MDE: Model Driven Engineering}
+% Model-driven engineering (MDE) is a software development methodology which focuses on creating models rather than computing and algorithmic concepts usually addressed in the classical programming approaches.
+% This discipline attempts an abstraction of the benefits and the features provided by the Software Engineering \cite{Marrone}, usually creating a domain specific framework for implementing new systems, based on well known and tested concepts, obtained through a careful and detailled analysis of the domain and its actors.
+% The best known MDE initiative is the Object Management Group (OMG) initiative Model-Driven Architecture (MDA), which is a registered trademark of OMG \cite{MDE}.
+ 
+
+
 % %---Where the problem is---
 % \subsection{BPEL, its drawbacks and the use of WSs in a lightweight scenario}
 % %\subsection{The drawbacks of using BPEL (BPEL and its possible drawbacks)}
@@ -42,10 +45,12 @@
 % - That's our question \nl
 % - Sometimes we might need services composition working in less powerful environments than distributed systems. Examples? \nl
 % - But we don't want to create a new application from scratch neither...(change hardware?).  \nl
-% %---Other works, our approach and what we achieve---
-% \subsection{Other works and proposed approach}
-% - Other similar works: don't know any yet. \nl
-% - Our attempt is to use the M2T techniques to obtain from a BPEL WSs composition a JavaRMI equivalent application \nl
-% - Where the limits of our solution are (BPEL subset? Lack of heavy test case? Doesn't work at all?...) \nl
-% - Where future work might be leaded \nl
 
+
+%SCALETTA
+%  \item Web Services
+%  \item Orchestration and Choreography
+%  \item BPEL (and its drawbacks)
+%  \item Web Services in a lightweight scenario
+%  \item Proposed approach, MDE, MDA
+% \end{itemize}
