--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -19,9 +19,13 @@ business process realized by the interaction of several services supervised by a
 --- Narrow down to orchestration and introduce BPEL \\
 --- The proposed approach \\
 
- 
-% We intend the word \textit{service} as the one used by the UDDI Oasis consortium \cite{Uddi}, where services are self-contained and modular applications that have Internet-oriented and standard-based interfaces. The given definition of services tightly relates to some of the well known web standards used to implement Web Services (WSs) \cite{DiLorenzo08}.
+%---Other works, our approach and what we achieve
 \subsection{Other works}
+% - Other similar works: don't know any yet. \nl
+% - Our attempt is to use the M2T techniques to obtain from a BPEL WSs composition a JavaRMI equivalent application \nl
+% - Where the limits of our solution are (BPEL subset? Lack of heavy test case? Doesn't work at all?...) \nl
+% - Where future work might be leaded \nl
+
 
 
 %---Overview of the whole work---
@@ -37,3 +41,6 @@ FIXME : To expand at the end
 %  \item Proposed approach, MDE, MDA
 % \end{itemize}
 
+
+%Generic stuff
+% We intend the word \textit{service} as the one used by the UDDI Oasis consortium \cite{Uddi}, where services are self-contained and modular applications that have Internet-oriented and standard-based interfaces. The given definition of services tightly relates to some of the well known web standards used to implement Web Services (WSs) \cite{DiLorenzo08}.
