--- a/report/LiteratureReview.tex
+++ b/report/LiteratureReview.tex
@@ -3,20 +3,30 @@
 
 %--- Brief overview on SOC and SOA
 \subsection{Services and composition, SOC and SOA}
-% During the years preceding the large spread of the internet, companies used to create their own software systems, in order to obtain highly customized and specific services, rarely focused on the accessibility by external partners.
-% Today, with the necessity of exchanging information among different companies and businesses, and the push made by the large growth of the Internet, the focus has moved to the integration and the coordination of the existing softwares, namely, the integration of these systems over larger networks.
-% Defining a \textit{service} as a distributed application that exports a view of its functionalities  \cite{DiLorenzo08}, what is needed is the possibility to compose different services together.
-% For example, it might be useful to integrate a service (already available on a net), providing maps of a city, with a web-based service listings thelephone numbers of a given city zone, resulting in a new service showing telephone numbers on the map. \fxnote{I might add a picture to better show the example here} 
-% 
-% 
-% The \textit{Service Oriented Computing} (SOC) is the paradigm that attempts to wrap and adapt exisisting applications into new services \cite{DiLorenzo08,Papazoglou03}, keeping security and ease of data sharing.
-% The architectural infrastructure to the SOC is called \textit{Service Oriented Architecture} (SOA). The idea behind the SOA is to describe, publish and make available web services (generally speaking, a combination of services) to requestors from multiple business domains.
-% 
-% %HERE
-% 
-% it is split up into provider, broker and requestor \cite{Pernici04} \nl
+During the years preceding the large spread of the Internet, companies used to create their own software systems, in order to obtain highly customized and specific services, rarely focused on the accessibility by external partners.
+Today, with the necessity of exchanging information among different companies and businesses, and the push made by the large growth of the Internet, the focus has moved to the integration and the coordination of the existing softwares, namely, the integration of these systems over larger networks.
+Defining a \textit{service} as a distributed application that exports a view of its functionalities  \cite{DiLorenzo08}, what is needed is the possibility to compose different services together.
+For example, it might be useful to integrate a service (already available on a net), providing maps of a city's streets, with a web-based service listings telephone numbers of a given city zone, resulting in a new service showing telephone numbers on the map. %\fxnote{I might add a picture to better show the example here} FIXME
+  
+The \textit{Service Oriented Computing} (SOC) is the paradigm that attempts to wrap and adapt existing applications into new services, which should comply to three main requirements \cite{DiLorenzo08,Papazoglou03}:
+\begin{itemize}
+ \item technological independent: the service should be accessible via well known protocols and have a descriptions available on most of the IT environments.
+ \item loosely coupled: the client and the provider of the service should not know each other's internal details.
+ \item location transparent: clients should be able to get information and access to a service, irrespectively of their location. 
+\end{itemize}
+Eventually the SOC paradigm makes use of services as the atomic components for developing new applications (which, in turn, can be services too \cite{Papazoglou03}.
 
-%---Who is dealing with logic and flow?
+
+To apply the SOC paradigm, there is a need of an architecture infrastructure style, which gives the directives and guidelines to build such a service.  
+The architectural infrastructure of the SOC is called \textit{Service Oriented Architecture} (SOA). 
+The idea behind the SOA is to describe, publish and make available services (generally speaking, a combination of services) obtained from a preexistent set of applications. 
+To achieve the results of making non-homogeneous applications, using different technologies and running on different platforms, work together, SOA makes use of standard interfaces and messaging protocols. This way each of the applications become an atomic, well defined and ready to be connected component. 
+The SOA presents an architecture devised in three main components as shown in Fig. \ref{The Service Oriented Architecture (SOA)}:
+a \textit{service provider}, which makes the service available. The service provider register its service to the \textit{service registry}, which contains the list of available services and their descriptions. The \textit{service client} contacts the service registry to find a service, it gets a contract and the address of the service, making a so called \textit{binding}, between service provider and client.\\
+
+Being the realization of services usually based on the reuse of previously existent software, there are many ways to realize it and they can also be combined. For a company, the realization can go from the complete in-house realization to the outsourcing, to buy/leasing just parts of the needed services or to using wrappers/adapters to reuse the legacy software.
+To conclude, from the SOA point of view, services are like black boxes, they can be invoked by service clients independently, without the need of knowing internal details. This makes clients and providers logically decoupled, the client only needs to know the name, the interface and the version of the service it needs. 
+
 \subsection{Web Services}
 % - Who is going to deal with the logic and flow of the composition? \nl
 % - Two main approaches: Orchestration and Choreography, where is the difference \cite{Peltz03} \nl
