--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 %---Web Services Composition Contest
-Today, the web is quickly expanding and new functionalities and applications, appearing day by day, are heavily increasing its potentialities and ease of use. Actually, one of the reasons why this growth is taking place is the possibility to connect and let communicate different existent applications, or better, \textit{services}.
+Today the web is quickly expanding and new functionalities and applications, appearing day by day, are heavily increasing its potentialities and ease of use. Actually, one of the reasons why this growth is taking place is the possibility to connect and let communicate different existent applications, or better, \textit{services}.
 
 This can be done through ad-hoc solutions, connecting, for example, some preexistent legacy applications to create a new application (perhaps available online or over a company's intranet) or using paradigms to abstract the existent applications and show them as services in a standard way. %SOC 
 In the case where the standard paradigm is favored, the implementation of such services also needs an architectural infrastructure style, where there are well defined the roles of which part of the application is offering to the outside world the service (Service Provider), who is the user of it (Service Client) and where the service should be published for a public usage (Service Registry). %SOA
