--- a/report/LiteratureReview.tex
+++ b/report/LiteratureReview.tex
@@ -38,13 +38,14 @@ On the picture of the SOA showed above, we can add these three components, as sh
 In the next paragraphs we have a brief look into these three technologies.
 
 \subsubsection{WSDL (Web Services Description Language) }
-WSDL is a language based \textit{XML}(eXtensible Markup Language) permits to unambiguously describe a service
+WSDL is a language based on \textit{XML}(eXtensible Markup Language) and it permits to unambiguously describe a web service. For example, it can describe the input parameters a client must provide to use the service and the expected result.
+ 
 % - Who is going to deal with the logic and flow of the composition? \nl 
 % - Two main approaches: Orchestration and Choreography, where is the difference \cite{Peltz03} \nl
 % - The concept of Workflow management \cite{Aalst98} (picture) and why BPEL is good at it.  \nl
 % 
 
-\subsection{workflow management: Orchestration vs Choreography}
+\subsection{Workflow management: Orchestration vs Choreography}
 
 \subsection{MDE: Model Driven Engineering}
 % Model-driven engineering (MDE) is a software development methodology which focuses on creating models rather than computing and algorithmic concepts usually addressed in the classical programming approaches.
