wsdl the elements

--- a/report/document.tex
+++ b/report/document.tex
@@ -4,6 +4,11 @@
 \usepackage{supertabular}
 \usepackage{url}
 \usepackage[draft]{fixme}
+\usepackage{booktabs} %For tables, horizontal and splittable lines
+\usepackage[format=hang,font=small,labelfont=bf]{caption} %To create bold caption for tables and pictures
+\setcounter{secnumdepth}{3} %Chap,Sec,Sub,Subsub
+\usepackage{fullpage} % to use the whole page 
+
 % \fxnote
 % \fxwarning
 % \fxerror 
