--- a/report/references.bib
+++ b/report/references.bib
@@ -84,6 +84,14 @@
 	address = "Italy"
 }
 
+@Misc{ IBMWSDL,
+	title = "Using WSDL in SOAP applications",
+	author = "IBM",
+	howpublished = "\url{http://www.ibm.com/developerworks/library/ws-soap/?dwzone=ws}",
+	year = "2000",
+	note = "[Online; accessed 10-June-2012]"
+}
+
 %******************SSE1 project references*********************************
 
 @Book{ DS-book,
