--- a/report/LiteratureReview.tex
+++ b/report/LiteratureReview.tex
@@ -38,12 +38,44 @@ On the picture of the SOA showed above, we can add these three components, as sh
 In the next paragraphs we have a brief look into these three technologies.
 
 \subsubsection{WSDL (Web Services Description Language) }
-WSDL is a language based on \textit{XML}(eXtensible Markup Language) and it permits to unambiguously describe a web service. For example, it can describe the input parameters a client must provide to use the service and the expected result.
+WSDL is a language based on \textit{XML}(eXtensible Markup Language) and it permits to unambiguously describe a web service. For example, it can describe the input parameters a client must provide to use the service and the type of the result the client should expect. 
+A WSDL description starts with a \textit{service} tag that identifies a group of related services. Each of the services is then described as following.\\
+
+The first element is the \verb|port| which identifies the address and the protocol to access the service (e.g. from the IBM online examples,\ref{IBMWSDL} \verb|<soap:address location="http://www.snowboard-info.co.uk/EndorsementSearch"/>|). With \verb|portType|, there are given the specifics of any \verb|operation| that can be used by the client, for example, the input/output parameters or the error messages. The \verb|operation|s comply to one of 4 main patterns: the \verb|One_way| (client sending a message to the provider), the \verb|Request_response| (client sending a message and waiting for an answer form the provider), the \verb|Solicit_response| (Provider sending a message to the client and waiting for a response) and the \verb|Notification| (provider sending a message to the client).
+The elements to define the messages and the types used by the service are \verb|message| and \verb|types|. The first specifies the structure of a message to be exchanged. The second, is used to define the atomic types (integer, string, etc.) or new custom types. 
+The most important elements in a WSDL service description are summarized in Table \ref{tab:WSDLElements}.\\
+
+Eventually, we can see that WSDL proposes a static picture of the service. It defines the address and the way to access it, the operations and the input/output elements to be provided, but it has no notion of the order 
+
  
 % - Who is going to deal with the logic and flow of the composition? \nl 
 % - Two main approaches: Orchestration and Choreography, where is the difference \cite{Peltz03} \nl
 % - The concept of Workflow management \cite{Aalst98} (picture) and why BPEL is good at it.  \nl
 % 
+%%%%%%%%%%%%% WSDL TABLE of characteristics %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{l p{12cm}}
+
+						\toprule
+						\addlinespace[0.2cm]
+\textbf{WSDL element} 	& \textbf{Description}	\\ 
+								\cmidrule(l){1-2}
+port 		& It identifies the address where the service is found and the protocol to access it 				\\[0,1cm]
+portType 	& It provides the description of the service, using the \textit{operation} element 				\\[0,1cm]
+operation 	& It is a basic functionality provided by the service. It lists the input and output messages that are exchanged, in one of the four communication patterns 														\\[0,1cm]
+message 	& It specifies the format of messages to be exchanged, e.g. the name and type of the variables they contain 	\\[0,1cm]
+types		& The atomic or user-defined data types in use  								\\[0,1cm]
+binding		& Given a portType, it describes how this is implemented in the specific protocol 				\\[0,1cm]
+	 
+						\addlinespace[0.2cm]
+						\bottomrule
+\end{tabular}
+\end{center}
+\caption{Basic WSDL elements and their description}
+\label{tab:WSDLElements}
+\end{table}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Workflow management: Orchestration vs Choreography}
 
