--- a/report/document.tex
+++ b/report/document.tex
@@ -2,13 +2,13 @@
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage{supertabular}
-\usepackage{url}
 \usepackage[draft]{fixme}
+\usepackage{subfigure}
 \usepackage{booktabs} %For tables, horizontal and splittable lines
 \usepackage[format=hang,font=small,labelfont=bf]{caption} %To create bold caption for tables and pictures
 \setcounter{secnumdepth}{3} %Chap,Sec,Sub,Subsub
 \usepackage{fullpage} % to use the whole page 
-
+\usepackage{url}
 % \fxnote
 % \fxwarning
 % \fxerror 
