--- a/report/skeleton.tex
+++ b/report/skeleton.tex
@@ -1,13 +1,3 @@
-%--------------------------------------------------------------------------------
-
-% How we do it: Why we do it, What particular method we use and what logic architecture we use
-\section{The methodological approach}
-%---What methodology we used---
-- Step by step \nl
-- Phase 1 \nl
-- Phase 2 \nl 
-- ... \nl
-
 %---Motivation: why do we move from DS to lightweight
 
 %\subsection{Orchestration/Choreography (maybe Composition?) in a lightweight scenario}
@@ -17,41 +7,7 @@
 
 
 %---Brief Literature review to introduce the tools Java RMI, JET, and the technique MDA--- 
-\section{Tools and Techniques}
+%\section{Tools and Techniques}
 
-
-%---Introduction to the MDA and how it basically works
-\subsection{The Model Driven Architecture (MDA)}
-- What it is \nl
-- Why we use it, why is good (because it is generic, Architecture independent, Reuse)  \nl
-- How we use it: From BPEL processes to Java RMI processes \nl
-\subsection{Java RMI}
-- Overview, features.
-- Why? it can run everywhere, lightweight scenarios  \nl
-\subsection{Jet}
-\subsection{EMF and Open Architecture Ware (Eclipse)}
-\subsection{other...} 
 %----------------------------------------------------------------------------------
-
-%---Detailed Architecture---
-%\fxnote{to be done}
-\section{Detailed Architecture}
-\section{Implementation}
-\section{Discussion}
-\section{Conclusion}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
