--- a/report/document.tex
+++ b/report/document.tex
@@ -25,17 +25,19 @@
 %\footheight = 10pt
 \textheight = 700pt %715
 
-\fancyheadoffset[L]{30pt}
-\footskip = 15pt
+\fancyheadoffset[L]{35pt} % gap between the header and the left side 
+%\fancyfootoffset[R]{25pt}
+\footskip = 20pt
 %\voffset=-3.5in
-%\fancyhead[LE,RO]{\slshape \rightmark}
+
 \fancyhead{} %Clear all headers
-%\fancyhead[LO]{\slshape \leftmark}
-\fancyhead[R]{\bfseries Bpel to Java}
+\fancyhead[R]{\slshape \rightmark} % To write the Subsection on the upper right[R] header side
+%\fancyhead[LO]{\slshape \leftmark} % To write the Section on the upper Left header side
+%\fancyhead[R]{\bfseries Bpel to Java} %To write the Thesis title on the upper Right header
 
 \lhead{\setlength{\unitlength}{1mm}
 \begin{picture}(0,0)
-\put(0,0){\includegraphics[width=60mm]{pictures/Logo.png}}
+\put(0,0){\includegraphics[width=65mm]{pictures/Logo.png}}
 \end{picture}}
 
 \fancyfoot{} %Clear the footer
