--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -20,7 +20,7 @@ business process realized by the interaction of several services supervised by a
 --- The proposed approach \\
 
 %---Other works, our approach and what we achieve
-\subsection{Other works}
+%\subsection{Other works}
 % - Other similar works: don't know any yet. \nl
 % - Our attempt is to use the M2T techniques to obtain from a BPEL WSs composition a JavaRMI equivalent application \nl
 % - Where the limits of our solution are (BPEL subset? Lack of heavy test case? Doesn't work at all?...) \nl
